[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imagegen_game_sdk"
version = "0.0.1"
authors = [
  { name = "Chinese Powered Labs"},
]
description = "Image generator for GAME by Virtuals"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "game-sdk>=0.1.1",
  "requests (>=2.32.3,<3.0.0)",
]

[tool.hatch.build.targets.wheel]
packages = ["imagegen_game_sdk"]

[project.urls]
"Homepage" = "https://github.com/game-by-virtuals/game-python/plugins/imagegen"
"Bug Tracker" = "https://github.com/game-by-virtuals/game-python"
