[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stateofmika_plugin_gamesdk"
version = "0.1.0"
authors = [{ name = "Alex Tan", email = "alex@chasm.net" }]
description = "Official State of Mika Python SDK for GAME by Virtuals"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.11.11",
    "game-sdk>=0.1.1"
]

[tool.hatch.build.targets.wheel]
packages = ["stateofmika_plugin_gamesdk"]

[project.urls]
"Homepage" = "https://github.com/game-by-virtuals/game-python/plugins/stateofmika"
"Bug Tracker" = "https://github.com/game-by-virtuals/game-python"

